# SynthSeg

./: .codespellrc  .gitattributes  .gitignore  Dockerfile  README.md  bibtex.bib  bibtex.txt  docker-build.sh  environment.yml  environment_osx.yml  environment_raven.yml  requirements.txt  requirements_python3.6.txt  requirements_python3.8.txt  requirements_raven.txt  setup.cfg  setup.py
.github/workflows/: docker_build.yml
SynthSeg/: __init__.py  brain_generator.py  brain_generator_options.py  estimate_priors.py  evaluate.py  labels_to_image_model.py  metrics_model.py  model_inputs.py  option_types.py  option_utils.py  predict.py  predict_denoiser.py  predict_group.py  predict_qc.py  predict_synthseg.py  sample_segmentation_pairs_d.py  segmentation_model.py  supervised_training.py  training.py  training_denoiser.py  training_group.py  training_options.py  training_qc.py  training_supervised.py  training_with_tfrecords.py  vae_model.py  validate.py  validate_denoiser.py  validate_group.py  validate_qc.py
SynthSeg/analysis/: freeSurferLUT.txt  label_analysis.py  (+1 more)
VAE/: decoder_keras_model.h5
data/: labels table.txt
docker/: Dockerfile
models/: SynthSeg.h5
scripts_PV-SynthSeg/: brain_generator.py
scripts_PVSeg/: brain_generator.py  example_training.txt  intensity_estimation.py  simulate_anisotropic_datasets.py
scripts_SynthSeg/: brain_generator.py
tests/: __init__.py  conftest.py  run_tf_output_comparison.py  test_brain_generator.py  test_fsl_tools.py  test_layers.py  test_option_serialization.py  test_segmentation_model.py  test_training_with_tfrecords.py
(+117 files in other folders)
