[metadata]
name = SynthSeg
url = https://github.com/BBillot/SynthSeg
download_url = https://github.com/BBillot/SynthSeg
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

description = Contrast-agnostic segmentation of MRI scans
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.7
install_requires =
    tensorflow
    keras==2.3.1
    nibabel
    sklearn
    tqdm
    pillow
    matplotlib
    ipython

packages = find:

[options.extras_require]
gpu =
    tensorflow-gpu==2.0.1
